--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <h1>No PHP, please.</h1>
       <p>The average human lifespan in Western countries is what, eighty years? Life is too short to waste on PHP.</p>
-    </div>  
+    </div>
   </div>
   <div class="container">
     <div class="col-md-4">
@@ -54,4 +54,14 @@ But that doesn’t mean it is a good idea. Know when to say no to an idea.” <e
     </div>
   </div>
 </body>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-26445559-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </html>
