Add icons, change to gradient

--- a/index.html
+++ b/index.html
@@ -7,12 +7,29 @@
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,700,700italic">
   <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
   <div class="jumbotron">
     <div class="container">
       <h1>No PHP, please.</h1>
-      <p>The average human lifespan in Western countries is what, eighty years? Life is too short to waste on PHP.</p>
+      <p>Life is too short to waste on PHP.</p>
     </div>
   </div>
   <div class="container">
@@ -44,15 +61,19 @@ But that doesn’t mean it is a good idea. Know when to say no to an idea.” <e
       <ul>
         <li><a href="http://python.org">Python</a></li>
         <li><a href="http://ruby-lang.org">Ruby</a></li>
-        <li><a href="http://dotnet.github.io/">.NET</a> (C# and <a href="http://fsharp.org">F#</a>)</li>
-        <li><a href="http://clojure.org">Clojure</a></li>
+        <li><a href="http://dot.net/">.NET</a> (C# and <a href="http://fsharp.org">F#</a>)</li>
+          <li>Some JVM languages, such as <a href="http://clojure.org">Clojure</a>, <a href="http://scala-lang.org">Scala</a>, <a href="http://kotlin-lang.org">Kotlin</a>, maybe <a href="http://groovy-lang.org">Groovy</a> or even <a href="http://java.oracle.com">Java</a></li>
         <li><a href="http://haskell.org">Haskell</a></li>
-        <li><a href="http://scala-lang.org/">Scala</a></li>
-        <li>even <a href="http://java.oracle.com">Java</a>!</li>
+        <li><a href="http://nodejs.org">Node.js</a>, probably</li>
         <li>Anything else, provided that it has none of the terrible features of PHP!</li>
       </ul>
     </div>
   </div>
+  <footer class="footer">
+    <div class="container">
+      <p class="text-muted">Created by <a href="http://jeffreypratt.net">Jeffrey Pratt</a> and hosted on <a href="http://aws.amazon.com/s3">Amazon S3</a>.</p>
+    </div>
+  </footer>
 </body>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
