--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ But that doesn’t mean it is a good idea. Know when to say no to an idea.” <e
         <li>The lovely <a href="http://scala-lang.org">Scala</a>.</li>
         <li><a href="http://fsharp.org">F#</a>.</li>
         <li><a href="http://clojure.org">Clojure</a>. (Do you see a pattern here?)</li>
-        <li><a href="http:/rust-lang.org">Rust</a>.</li>
+        <li><a href="http://rust-lang.org">Rust</a>.</li>
         <li><a href="http://go.dev">Go</a>.</li>
         <li><a href="http://python.org">Python</a>.</li>
         <li>Something else, provided that it has none of the terrible features of PHP!</li>
